# kpa

./: .gitignore  README.md  funciones.py  kpa.py  mkpa.sh  pyproject.toml  requirements.txt
.github/workflows/: linter.yml
docs/: anteriores.md  english.md  español.md
kpa/: aurapi.py  colorprints.py  diff.txt  extra_utils.py  funciones.py  git.py  kpa.py  parser.py
kpa/utlds/: aurapi.py  funciones.py
utlds/: #funciones.py#  aurapi.py  funciones.py  multiple.py  parser.py
